# lsb

./: .gitignore  Cargo.toml  Justfile  LICENSE  flake.nix
lsb-core/: Cargo.toml  default.nix
lsb-core/src/: cli.rs  consts.rs  embed.rs  error.rs  extract.rs  hash.rs  image.rs  lib.rs  main.rs
lsb-core/tests/: test_0.rs
lsb-js/: Cargo.toml  LICENSE_MIT
lsb-js/src/: error.rs  lib.rs
lsb-js/tests/: web.rs
lsb-py/: Cargo.toml  default.nix  lsb_py.pyi  pyproject.toml
lsb-py/src/: error.rs  lib.rs
lsb-py/tests/: __init__.py  test_0.py
