[package]
name = "lsb-core"
version = "0.1.0"
authors = [ "Fay Ash <yaoshiu@qq.com>" ]
description = "A command-line tool for managing and analyzing Linux Standard Base (LSB) files."
license = "MIT"
repository = "https://github.com/yaoshiu/lsb"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lsb-core"
path = "src/main.rs"

[dependencies]
blake3 = { version = "1.8.2", features = ["traits-preview"] }
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.52"
digest = "0.10.7"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
md5 = "0.7.0"
rand = "0.9.1"
rand_pcg = "0.9.0"
rayon = "1.10.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }

