[package]
name = "lsb-js"
version = "0.1.0"
authors = ["Fay Ash <yaoshiu@qq.com>"]
description = "A JavaScript library for LSB (Lisp System Builder) that provides a WebAssembly interface."
license = "MIT"
repository = "https://github.com/yaoshiu/lsb"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
lsb-core = { version = "0.1.0", path = "../lsb-core" }
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.27"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
